# tito-ai

./: .env.testing  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  TODO-RUNNERS-SCALABILITY.md  TODO-rag-ingestion.md  boost.json  components.json  compose.yaml  composer.json  opencode.json  package-lock.json  package.json  phpunit.xml  pnpm-lock.yaml  postman-collection.json  test.php  test2.php  test3.php  test4.php
services/runners/: .env.example  Dockerfile  TODO_SIP_INTEGRATION.md  ava-reference-asterisk-guide.md  compose.yaml  dograph-reference-asterisk-guide.md  pyproject.toml  run_ari_manager.py
services/runners/app/: main.py  worker.py
services/runners/app/core/: config.py
services/runners/app/services/: agent_resolution_service.py  command_consumer.py  deployment_service.py  runner_registry.py  session_manager.py  trunk_resolution_service.py  trunk_service.py
services/runners/config/asterisk/: ari-websocket.conf  ari.conf  asterisk.conf  chan_websocket.conf  extensions.conf  http.conf  logger.conf  manager.conf  modules.conf  pjsip.conf  rtp.conf  stasis.conf  websocket_client.conf
services/runners/docs/: ARI_WEBSOCKET_INTEGRATION.md  GUIA_PRUEBA_LLAMADA.md  PLAN_CONTINUACION_IA.md  README.md  example_lifespan.py
services/runners/docs/agents/: agent-design.md
services/runners/docs/plans/: README.md  backlog.md  sip-alias-hash.md  sip-direct-hash.md  sip-platform.md
services/runners/docs/resources/: agent-flow-manifest.json  agent-mvp-manifest.json  agent-pipeline-manifest.json  agent-sip-manifest.json  agent-unified-manifest.json  (+3 more)
services/runners/scripts/: setup_test_trunk.sh  test_call.sh
(+889 files in other folders)
